[project]
name = "apis-core-rdf"
version = "0.50.2"
description = "Base package for the APIS framework"
readme = "README.md"
authors = [
    {name="Matthias Schlögl", email="matthias.schloegl@oeaw.ac.at"},
    {name="Birger Schacht", email="birger.schacht@oeaw.ac.at"},
    {name="K Kollmann", email="dev-kk@oeaw.ac.at"},
    {name="Saranya Balasubramanian", email="saranya.balasubramanian@oeaw.ac.at"}
]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.1,<5.3",
    "djangorestframework>=3.14.0,<4.0",
    "django-filter>=24.3",
    "django-autocomplete-light>=3.9.4,<3.12.0",
    "django-crum>=0.7.9,<8.0",
    "django-crispy-forms>=2,<3.0",
    "django-tables2>=2.3.3,<3.0",
    "rdflib>=6.0.2,<8.0.0",
    "drf-spectacular>=0.26.1,<0.29.0",
    "django-model-utils>=4.1.1,<6.0.0",
    "crispy-bootstrap4>=2023.1,<2025.0",
    "crispy-bootstrap5>=2024.10",
    "django-simple-history>=3.6",
    "pydot>=3.0.2,<5.0",
    "acdh-arche-assets>=3.21.1,<=4.0",
    "tablib>=3.8.0,<=4.0",
    "httpx>=0.28.1",
]

[tool.uv]
dev-dependencies = [
    "coverage==7.5.3",
    "deptry==0.23",
    "djlint==1.36.4",
    "faker>=28.4.1",
    "ruff==0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
docs = [
    "markdown-include>=0.8.1",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.29.1",
]

[tool.hatch.build.targets.wheel]
packages = ["apis_core"]
artifacts = ["**/*.mo"]

[tool.hatch.build.targets.sdist]
artifacts = ["**/*.mo"]

[tool.djlint]
indent=2
profile="django"
extension="html"
blank_line_before_tag="block"
blank_line_after_tag="endblock"
format_js=false
ignore = "H006,H031"

[tool.ruff]
lint.select = ["E4", "E7", "E9", "F", "I"]
lint.ignore = ["E501", "F403"]
lint.isort.known-first-party = ["apis_core"]

[tool.deptry]
extend_exclude = [".*/tests"]

[tool.deptry.per_rule_ignores]
DEP002 = ["crispy-bootstrap4", "crispy-bootstrap5", "tablib"]

[tool.deptry.package_module_name_map]
djangorestframework = "rest_framework"
django-autocomplete-light = ["dal", "dal_select2"]
django-filter = "django_filters"
django-crispy-forms = "crispy_forms"
django-reversion = "reversion"
django-model-utils = "model_utils"
djangorestframework-csv = "rest_framework_csv"
django-crum = "crum"
django-simple-history = "simple_history"
acdh-arche-assets = "AcdhArcheAssets"
